update to stop horizontal scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,13 @@ html{
     color:var(--rustyRed);
 }
 
+html, body {
+    overflow-x: hidden;
+  }
 
 body{    
     background-color: var(--offWhite);
-    width:100vw;
+    position: relative;
 }
 
 
